@@ -1,6 +1,7 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.10.4 (unreleased)
+  - Don't close referenced upstream issues from a forked project.
 
 v 8.10.3
   - Fix Import/Export issue importing milestones and labels not associated properly. !5426
